--- a/css/lab3.css
+++ b/css/lab3.css
@@ -62,8 +62,6 @@ body {
     padding: 20px;
   }
 
-
-  
   section {
     margin-bottom: 20px;
   }
@@ -95,13 +93,49 @@ body {
   article p {
     margin-bottom: 10px;
   }
+
+  #animated {
+    transform: scale(1);
+    transition: transform 1s ease-in-out;
+  }
+
+  button {
+    background-color:#684551;
+    border: 1px solid #684551;
+    border-radius: 50px;
+    color: white;
+    cursor: pointer;
+    font-family: 'Inclusive Sans', sans-serif;
+    padding: 5px 15px;
+    transition: all 0.4s ease-in-out;
+  }
   
+  button:hover {
+    background-color: #D5B0AC;
+    border-color: #D5B0AC;
+  }
+  
+  #myElement {
+    position: absolute;
+    top: 100px;
+    left: 100px;
+    opacity: 0;
+  }
+
+  #myElement img {
+    width: 70px;
+    height: 70px;
+  }
+  
+  #myButton {
+    position: relative;
+
   footer {
     background-color: #ccc;
     padding: 5px;
   }
 
-  @media screen and (min-width: 900px) {
+  @media screen and (min-width: 700px) {
     .featured-posts {
       display: flex;
       flex-direction: row;
@@ -122,7 +156,5 @@ body {
       article img {
         width: 300px;
         height: 300px;
-        
       }
-
-}
+  }
